--- a/pro/index.html
+++ b/pro/index.html
@@ -11,10 +11,8 @@
 		<title>TSpace</title>
 		<!-- <meta name="viewport" content="width=640, user-scalable=no, target-densitydpi=device-dpi"> -->
 		<meta name="viewport" content = "width=device-api,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<!-- build:css -->
-		<link rel="stylesheet" type="text/css" href="statics/css/common.css?rev=a3cfdf0edf5f97733e2e72f0d7a30da1">
-		<link rel="stylesheet" type="text/css" href="statics/css/index.css?rev=bb783a58fe0f5bb488254ad28aec44a3">
-		<!-- endbuild -->
+		<link rel="stylesheet" href="statics/css/style.min.css?rev=@@hash">
+
 		<script type="text/javascript" src="statics/libs/myflexible.js"></script>
 		<script type="text/javascript" src="statics/libs/zepto.min.js"></script>
 		<script type="text/javascript" src="statics/libs/react.js"></script>
@@ -47,6 +45,5 @@
 		</div>
 	</body>
 </html>
-<!-- build:js -->
-	<script type="text/javascript" src="statics/build/build.js?rev=8efcf07096329e677c017a5e54f1a03d"></script>
-<!-- endbuild -->
+<script src="statics/build/build.min.js?rev=@@hash"></script>
+
