--- a/pro/index.html
+++ b/pro/index.html
@@ -11,13 +11,12 @@
 		<title>TSpace</title>
 		<!-- <meta name="viewport" content="width=640, user-scalable=no, target-densitydpi=device-dpi"> -->
 		<meta name="viewport" content = "width=device-api,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="statics/css/style.min.css?rev=@@hash">
+		<link rel="stylesheet" href="statics/css/index1style.min.css?rev=@@hash">
 
 		<script type="text/javascript" src="statics/libs/myflexible.js"></script>
 		<script type="text/javascript" src="statics/libs/zepto.min.js"></script>
 		<script type="text/javascript" src="statics/libs/react.js"></script>
 		<script type="text/javascript" src="statics/libs/react-dom.js"></script>
-		
 	</head>
 	<body>
 		<div class="viewbox">
@@ -28,22 +27,14 @@
 				<div class="tac pd20 fs24">
 					分享心情的空间，记录美好的时刻
 				</div>
-				<div id="app"></div>
-				<div class="login-box">
-					<div class="frombox fs30 mb20">
-						<input type="text" placeholder="用户名" name="username">
-					</div>
-					<div class="frombox fs30 mb20">
-						<input type="password" placeholder="密码" name="password">
-					</div>
-					<div class="frombox fs30 mt40">
-						<a href="javascript:;">登录</a>
-					</div>
+				<div class="login-box" id="login-box">
+					
 				</div>
 				
 			</section>
 		</div>
 	</body>
 </html>
-<script src="statics/build/build.min.js?rev=@@hash"></script>
+<script src="statics/build/index1build.min.js?rev=@@hash"></script>
+
 
